# omnigres

./: shell.nix  sitemap.xml
extensions/: CMakeLists.txt
extensions/omni_alerts/: CMakeLists.txt  omni_alerts--0.1.sql  omni_alerts.c
extensions/omni_alerts/tests/: capture.yml
extensions/omni_web/: CMakeLists.txt
extensions/omni_xml/: CMakeLists.txt
